# MPKM-21-22

./: README.md  private.key  public.key  signature.pem
lab1/: AES(EAX).txt  Lab1_Zvychainaia.cpp  PyCryptodome.py  private.key  public.key  signature.pem
lab1/Bublik_Volynskyi_Slutsky/: main.py
lab1/Hennadii_Shybaiev/: .gitignore  CMakeLists.txt  README.md  build.sh
lab1/Hennadii_Shybaiev/etc/cmake/: spdlog.cmake
lab1/Hennadii_Shybaiev/include/kpi/cryptomech/lab1/: GmpInteger.hpp  GmpTest.hpp
lab1/Hennadii_Shybaiev/include/kpi/cryptomech/lab1/impl/: GmpIntegerImpl.hpp  GmpTestImpl.hpp
lab1/Hennadii_Shybaiev/src/: main.cpp
lab1/Kovalevskiy_Chashnitska_Tkachenko/: crypto_pp_AES256.cpp  crypto_pp_RSA.cpp  crypto_pp_SHA256.cpp  lab1_pycryptodome_openssl.ipynb  rsa_key_gen.py
lab1/Nikita Korzh/: PyCryptodome.py  public.key
lab1/Vladyslav_Draha/: .gitignore  Makefile  OpenSSL_size.cpp  OpenSSL_time.cpp  PyCrypto_size.py  PyCrypto_time.py  crypto++_size.cpp  crypto++_time.cpp  info  init.sh  settings.hpp  settings.py
lab1/fb01_dreamteam/: Readme.md
lab1/voitsekhovskyi_vovchanovskyi/: run.py
lab2/Bublik_Volynskyi_Slutsky/: main.c  main.py  randoutput.txt
lab2/Draha_Chikhladze/: DSA_private.pem  DSA_public.pem  ECC_private.pem  ECC_public.pem  RSA_private.pem  RSA_public.pem  main.py
lab2/Tulupov_Kustareva/: Program.cs  lab_2_Kustareva_Tulupov.rtf
lab2/Zvychainaia_Lab2/: Lab2.cpp  generators.h  millerRabin.h  tests.h
lab3/: flow_tests.py
lab3/Bob/: secret.ini
lab3/Bublik_Volynskyi_Slutsky/: Alice_public.ini  main.py  (+2 more)
lab4/: Draha_Chikhladzekey
(+131 files in other folders)
